--- a/app/src/main/res/layout/activity_connect_payment.xml
+++ b/app/src/main/res/layout/activity_connect_payment.xml
@@ -72,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_quintuple"
+            android:enabled="false"
             android:text="@string/ONBOARDING_CONNECT_DD_CTA"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
