--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -145,7 +145,7 @@
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/base_margin_triple"
                     android:background="@drawable/divider"
-                    android:backgroundTint="@color/separator"
+                    android:backgroundTint="@drawable/divider"
                     app:layout_constraintTop_toBottomOf="@id/typeLabel" />
 
                 <Button
@@ -209,7 +209,7 @@
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/base_margin_triple"
                     android:background="@drawable/divider"
-                    android:backgroundTint="@color/separator"
+                    android:backgroundTint="@drawable/divider"
                     app:layout_constraintTop_toBottomOf="@id/coinsuredAmountLabel" />
 
                 <Button
