--- a/app/src/main/res/layout/cashback_option.xml
+++ b/app/src/main/res/layout/cashback_option.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/base_margin_triple"
-            android:background="@color/separator"
+            android:background="@drawable/divider"
             app:layout_constraintTop_toBottomOf="@id/cashbackOptionParagraph" />
 
         <Button
