fixed rotating button and single select cornerRadius

--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -37,12 +37,12 @@
             android:prompt="@string/mock_personas_prompt" />
 
         <Button
-            android:id="@+id/openNorwegianAuth"
+            android:id="@+id/openChatActivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:text="Open Norwegian Auth" />
+            android:text="Open ChatActivity" />
 
         <Button
             android:id="@+id/openNativeOffer"
