--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -15,17 +15,24 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <ImageView
-            android:id="@+id/uploadFile"
-            style="?attr/selectableItemBackgroundBorderless"
+        <FrameLayout
+            android:id="@+id/attach_file_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/ic_attach_file_background"
             android:layout_gravity="center_vertical|bottom"
             android:layout_marginStart="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_half"
-            android:layout_marginBottom="@dimen/base_margin"
-            android:contentDescription="@string/UPLOAD_FILE_BUTTON_HINT"
-            android:src="@drawable/ic_attach_file" />
+            android:layout_marginBottom="@dimen/base_margin">
+
+            <ImageView
+                android:id="@+id/uploadFile"
+                style="?attr/selectableItemBackgroundBorderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/UPLOAD_FILE_BUTTON_HINT"
+                android:src="@drawable/ic_add" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/sendGif"
