--- a/app/src/main/res/drawable/button_primary.xml
+++ b/app/src/main/res/drawable/button_primary.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:padding="10dp" android:shape="rectangle">
             <solid android:color="#FFFFFF"/>
-            <corners android:radius="112dp"/>
+            <corners android:radius="@dimen/base_margin"/>
         </shape>
     </item>
 </ripple>
