--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -60,8 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@drawable/divider"
-                android:backgroundTint="@drawable/divider" />
+                android:background="@drawable/divider" />
 
             <TextView
                 android:layout_width="wrap_content"
